--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "sandeepshetty/redis_protocol",
+	"name": "phpish/redis",
 	"type": "library",
 	"description": "Simple PHP client library for the Redis protocol (http://redis.io/topics/protocol)",
 	"keywords": ["redis"],
-	"homepage": "https://github.com/sandeepshetty/redis_protocol",
+	"homepage": "https://github.com/phpish/redis",
 	"license": "MIT",
 	"authors": [
 		{
