--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "phpish/redis",
 	"type": "library",
-	"description": "Simple PHP client library for the Redis protocol (http://redis.io/topics/protocol)",
+	"description": "Simple Redis client in PHP",
 	"keywords": ["redis"],
 	"homepage": "https://github.com/phpish/redis",
 	"license": "MIT",
